--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,9 +21,10 @@
             android:layout_gravity="center"
             />
         <TextView
+            android:id="@+id/location_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="현재위치"
+            tools:text="현재위치"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -56,6 +57,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:scrollbars="none"
         >
         <com.google.android.material.chip.ChipGroup
