--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.FoodDeliveryApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="toolbarStyle">@style/Widget.Zibro.Toolbar</item>
         <item name="toolbarWithArrowButtonStyle">@style/Widget.Zibro.Toolbar.WithArrow</item>
-        <item name="toolbarWithCloseButtonStyle">@style/Widget.Zibro.Toolbar.WithArrow</item>
+        <item name="toolbarWithCloseButtonStyle">@style/Widget.Zibro.Toolbar.WithClose</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
@@ -16,11 +16,5 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="Theme.FoodDeliveryApp">
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/black</item>
-        <item name="android:background">@null</item>
     </style>
 </resources>
