22/06/27 사용자 위치를 기반으로한 식당 정보 가져와 RecyclerView에 뿌려줌 + 위치가 달라질때마다 API 호출해 RecyclerView Item 업데이트 + Room에 저장된 사용자 위치와 사용자가 지정한 위치가 다르면 Toast 메시지 출력 + 식당 카테고리 별 메뉴/페이지 작성

--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -66,6 +66,7 @@
         android:layout_margin="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:text="@string/set_this_location"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
