--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,6 +7,11 @@
         android:icon="@drawable/ic_baseline_home_24"
         />
     <item
+        android:id="@+id/menu_like"
+        android:title="@string/like"
+        android:icon="@drawable/ic_heart_disable"
+        />
+    <item
         android:id="@+id/menu_my"
         android:title="@string/menu_my"
         android:icon="@drawable/ic_baseline_my_24"
