--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_168">#A8A8A8</color>
+    <color name="black_24">#3D000000</color>
 
 
     <color name="orange_yellow">#FFCA42</color>
